Fix overflow bug (2)

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -36,19 +36,23 @@
 	color: rgb(51, 51, 51);
 }
 
+.app-bar select.select2{
+	display: none;
+}
+
 .app-bar .select2 {
-	display: block;
-	margin: 6px;
+	margin: 6px 0;
 	width: 100%;
 	max-width: 250px;
 	border-radius: 0;
+	box-sizing: border-box;
 }
 
 .app-bar .date-select {
 	display: inline-flex;
 	width: 300px;
 	height: 28px;
-	margin: 6px;
+	margin: 6px 0;
 	line-height: 28px;
 	vertical-align: middle;
 	border: 1px solid rgb(170, 170, 170);
